--- a/deployment/aws-cloudendure-migration-factory-solution-mgn-target-account.template
+++ b/deployment/aws-cloudendure-migration-factory-solution-mgn-target-account.template
@@ -110,6 +110,7 @@ Resources:
                 Resource: '*'
               - Effect: Allow
                 Action:
+                  - 'iam:GetInstanceProfile'
                   - 'ec2:DescribeAccountAttributes'
                   - 'ec2:DescribeAvailabilityZones'
                   - 'ec2:DescribeImages'
