--- a/deployment/CFN-templates/aws-cloud-migration-factory-solution-credentialmanager.template
+++ b/deployment/CFN-templates/aws-cloud-migration-factory-solution-credentialmanager.template
@@ -1,5 +1,5 @@
 AWSTemplateFormatVersion: '2010-09-09'
-Description: (%%SOLUTION_ID%%) - The AWS CloudFormation template for deployment of the AWS
+Description: (%%SOLUTION_ID%%-credmgr) - The AWS CloudFormation template for deployment of the AWS
   Cloud Migration Factory Credential Manager module (Version %%VERSION%%)
 Parameters:
   CodeBucket: # Upload Code in this bucket
